a new image folder has been added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hello World</h1>
-</body>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum inventore sint, tempore debitis quibusdam excepturi in ad necessitatibus. Ea impedit necessitatibus sint voluptatibus quidem nesciunt illum repellendus quasi repudiandae cumque.</body>
+         
+    </body>
 </html>
