added a new styles.css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Hello World</h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum inventore sint, tempore debitis quibusdam excepturi in ad necessitatibus. Ea impedit necessitatibus sint voluptatibus quidem nesciunt illum repellendus quasi repudiandae cumque.</body>
-         
-    </body>
+    <div id="loki1">
+        <h1>Hello</h1>
+    </div>
+    <div id="loki2">
+        <h2>World</h2>
+    </div>
+</body>
 </html>
