few changes ony

--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div id="loki1">
-        <h1>Hello</h1>
+    <div class="container">
+        <div class="item">
+            hii
+        </div>
+        <div class="item">
+            hii
+        </div>
+        <div class="item">
+            hii
+        </div>
     </div>
-    <div id="loki2">
-        <h2>World</h2>
-    </div>
+    
 </body>
 </html>
